--- a/portfolio/sass/portfolio.scss
+++ b/portfolio/sass/portfolio.scss
@@ -2,7 +2,7 @@
 * @Author: Thea Ao
 * @Date:   2017-06-12 11:55:59
 * @Last Modified by:   Thea Ao
-* @Last Modified time: 2017-06-12 22:02:01
+* @Last Modified time: 2017-06-14 00:24:52
 */
 @import 'reset';
 
@@ -33,35 +33,28 @@ body {
     .floatfix {
         display: inline-block;
     }
-    .center {
-    }
     .card {
-        width: 300px;
-        margin: 20px;
-        background-color: $homepageBg;
         color: $fontColor1;
 
         .heading {
-            background-color: $headerBg;
-            margin: 0;
-            height: 30px;
-            padding: 5px 20px;
+            text-align: center;
         }
-
-        .content {
-            margin: 20px;
+        .content{
             text-align: left;
-        }
+        }        
+    }
+    li ul {
+        margin-left: 20px;
     }
 }
 
 /*header 样式*/
 header {
     background-color: $headerBg;
+    z-index: 999;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
     
     nav {  
         @include block(100vw, 40px); 
@@ -87,18 +80,18 @@ header {
 /*各个section样式*/
 main {
     background-color: $mainBg;
-    margin-top: 40px;
 
     section {
         position: relative;
         text-align: center;
-        padding: 20px;
+        padding: 40px 20px 20px;
+        transition: transform 1000ms;
     }
 
     section#homepage {
         background-color: $homepageBg;
         color: $fontColor1;
-        height: calc(100vh - 40px);
+        height: 100vh;
         
         div.container {
             @include center;
@@ -118,7 +111,11 @@ main {
 
         .card {
             width: 60%;
-            background-color: transparent;
+            @include center;
+
+            .heading {
+                margin-top: 0;
+            }
 
             div {
                 padding: 20px;
@@ -131,42 +128,53 @@ main {
             .right {
                 background-color: $headerBg; 
             }
-            .center {
-                text-align: left;
-            }
         }
     }
 
     section#skills {
-        
-        .content {
-            li {
-                margin: 10px 0;
+        .card {
+            width: 300px;
+            margin: 20px;
+            background-color: $homepageBg;
+            vertical-align: top;
+
+            .heading {
+                background-color: $headerBg;
+                margin: 0;
+                height: 30px;
+                padding: 5px 20px;
             }
-            .fa {
-                margin: 0 5px;
+
+            .content {
+                margin: 20px;
+
+                li {
+                    margin: 10px 0;
+                }
+                .fa {
+                    margin: 0 5px;
+                }
             }
         }
     }
 
     section#projects {
-        padding: 20px;
 
         .project {
             position: relative;
             margin: 20px 20px 10px;
             
             .preview {
-                @include block(300px,300px);
+                @include block(300px,200px);
             }
 
             .intro {
                 position: absolute;
                 top: 0;
-                @include block(300px,300px);
+                @include block(300px,200px);
                 background-color: rgba(89,154,150,0.9);
                 color: $fontColor1;
-                padding: 20px;
+                padding: 0 20px;
                 display: none;
 
                 p {
@@ -198,7 +206,7 @@ main {
 
     div.nextpage {
         position:absolute;
-        bottom: 10px;
+        bottom: 40px;
         left: 50%;
         transform: translateX(-50%);
         color: fontColor1;
@@ -215,23 +223,21 @@ footer {
 
 /*响应式*/
 @media (min-width: 768px) {
+    body {
+        overflow: hidden;
+    }
     .card {
         height: 300px;
     }
-    section#about-me, section#skills {
-        height: calc(100vh - 40px);
-    }
-
     section#about-me {
         .card {
-            @include center;
 
             div {
                 width: 50%;
-                height: 100%;;
+                height: 100%;
             }
             .content {
-                @include center(-80%);
+                @include center(-60%);
             }
         }
     }
